--- a/all/themes/jjamerson_lb/lrweb.berklee.edu-resources.html
+++ b/all/themes/jjamerson_lb/lrweb.berklee.edu-resources.html
@@ -32,7 +32,9 @@ div#faculty_select_box_container,div#course_select_box_container{float:none;marg
 			//$footer.css("position", "absolute");
 			//$footer.css("bottom", "0");
 			$footer.css("width", "100%");
-			$.getScript($bcm_domain+"/sites/all/themes/jjamerson_lb/js/jjamerson_lb.min.js", function(data, textStatus, jqxhr){console.log( textStatus );});
+			$.getScript("https://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js", function(data, textStatus, jqxhr){console.log(textStatus+": cookie" );});
+			$.getScript($bcm_domain+"/sites/all/themes/jjamerson_lb/js/jjamerson_lb.min.js", function(data, textStatus, jqxhr){console.log(textStatus+": jjamerson");});
+
 		});
 	});
 </script>
