--- a/tbc/bco.kohalibrary.com/bco.kohalibrary.com-inline.html
+++ b/tbc/bco.kohalibrary.com/bco.kohalibrary.com-inline.html
@@ -9,9 +9,12 @@
 
 <!-- Discovey Layer Editor: Footer HTML -->
 <div id="ft">
-		Albert Alphin Library | The Boston Conservatory | 8 The Fenway | Boston, MA 02215 | 617-912-9131 | <a href="mailto:library@bostonconservatory.edu">library@bostonconservatory.edu</a>
+		Albert Alphin Library | Boston Conservatory at Berklee | 8 Fenway, Boston, MA 02215 | 617-912-9131 | <a href="mailto:library@bostonconservatory.edu">library@bostonconservatory.edu</a>
 </div>
 <!-- / Discovey Layer Editor: Footer HTML -->
+<!-- Minified by http://www.willpeavy.com/minifier/ -->
+<div id="ft">Albert Alphin Library | Boston Conservatory at Berklee | 8 Fenway, Boston, MA 02215 | 617-912-9131 | <a href="mailto:library@bostonconservatory.edu">library@bostonconservatory.edu</a></div>
+<!-- / Minified -->
 
 
 <!-- Discovey Layer Editor: Logo HTML -->
@@ -20,128 +23,105 @@
 
 
 <!-- Discovey Layer Editor: Landing Page HTML -->
-<title>
-	Albert Alphin Library Catalog
-	</title>
-<style>
-
-.clearfix {
-    overflow: auto;
-}
-
-nav {
-    float: left;
-    width: 200px;
-    }
-
-section {
-    margin-left: 206px;
-    }
-</style>
-
-<div class="clearfix">
-
-  <section>
-    <table width="900">
-	<tbody><tr>
-	<td valign="top" width="400">
-	<a href="http://bco.kohalibrary.com/cgi-bin/koha/opac-user.pl">Log in to your account</a> to renew your items or check your fines.
-	<hr>
-	Click <b>Advanced Search</b> above to limit by collection or format.
-	<hr>
-	<b>Is an item that you want checked out? Place a hold on it!</b>
-	<br>
-	Holds cannot be placed on items that are available on the shelf.
-	<hr>
-	<img src="http://cdn.kohalibrary.com/c/bco/library.jpg" alt="Library" width="400">
-
-	</td>
-
-	<td valign="top" width="190">
-	<center>
-	<img src="http://cdn.kohalibrary.com/c/bco/library_hours.jpg" alt="Library Hours" width="180">
-
-
-	<center>
-	<b>Regular Semester Hours<b>
-	</b><center><b>until 5/6/16<br>
-	<table width="180">
-	<tbody><tr>
-	<td>Sunday</td><td>12pm-10pm</td>
-	</tr>
-	<tr>
-	<td>Monday</td><td>8am-11pm</td>
-	</tr>
-	<tr>
-	<td>Tuesday</td><td>8am-11pm</td>
-	</tr>
-	<tr>
-	<td>Wednesday</td><td>8am-11pm</td>
-	</tr>
-	<tr>
-	<td>Thursday</td><td>8am-10pm</td>
-	</tr>
-	<tr>
-	<td>Friday</td><td>8am-6pm</td>
-	</tr>
-	<tr>
-	<td>Saturday</td><td>12pm-5pm</td>
-	</tr>
-	</tbody></table>
-
-	<hr>
-	<b>Holiday Hours &amp; Exceptions:</b>
-	</b><center><b>4/18: Closed<br>
-	</b><center><b>5/30: Closed<br>
-	</b>
-	<hr>
-	<center>
-	<b>For full schedule see
-	<center>
-	<a href="http://www.bostonconservatory.edu/library">Library Hours of Operation
-	<center>
-
-	</center></a></center></b></center></center></center></center></b></center></center></td><td valign="top" width="300">
-	<b>Jennifer Hunt</b><br>
-	Director of the Library<br>
-	<a href="mailto:jhunt@bostonconservatory.edu"> jhunt@bostonconservatory.edu</a><br>
-	617-912-9132<br>
-	<i>Contact for donations and purchase requests</i>
-
-	<hr>
-
-	<b>Brendan Higgins</b><br>
-	Public Services Librarian/Archivist<br>
-	<a href="mailto:bhiggins@bostonconservatory.edu"> bhiggins@bostonconservatory.edu</a><br>
-	617-912-9131<br>
-	<i>Contact for course reserves</i>
-
-	<hr>
-
-	<b>Reg Didham</b><br>
-	Cataloging and Acquisitions Librarian<br>
-	<a href="mailto:rdidham@bostonconservatory.edu"> rdidham@bostonconservatory.edu</a><br>
-	617-912-9130<br>
-	<i>Contact for inter-library loan</i>
-
-	<hr>
-
-	<b>Clifton Ingram</b><br>
-	Evening Circulation Supervisor<br>
-	<a href="mailto:cingram@bostonconservatory.edu"> cingram@bostonconservatory.edu</a><br>
-	617-912-9131<br>
-
-	<hr>
-
-	<b>Kevin Church</b><br>
-	Stacks Maintenance Supervisor<br>
-	<a href="mailto:kchurch@bostonconservatory.edu"> kchurch@bostonconservatory.edu</a><br>
-	617-912-9131
-	</td>
-	</tr>
-	</tbody></table></section>
-
+<div id="tbc-library-front-contents-wrapper">
+<div class="tbc-library-front-contents">
+	<div class="col col-1">
+                <div class="row-jsong">
+                        <h4>Welcome to the Albert Alphin Library Catalog.</h4>
+                </div>
+		<div class="row-jsong">
+			<a href="http://bco.kohalibrary.com/cgi-bin/koha/opac-user.pl">Log in to your account</a> to renew your items or check your fines.
+		</div>
+		<div class="row-jsong">
+			Click <b><a href="/app/search">Advanced Search</a></b> above to limit by collection or format.
+		</div>
+		<div class="row-jsong">
+		<b>Is an item that you want checked out? Place a hold on it!</b><br>Holds cannot be placed on items that are available on the shelf.
+		</div>
+		<div class="row-jsong">
+			<img src="http://cdn.kohalibrary.com/c/bco/library.jpg" alt="Library">
+		</div>
 	</div>
+	<div class="col col-2">
+		<div class="row-jsong">
+			<h5>Regular Semester Hours <br /><b>until 5/6/16</b></h5>
+			<table>
+				<tbody>
+					<tr>
+						<td>Sunday</td><td>12pm-10pm</td>
+					</tr>
+					<tr>
+						<td>Monday</td><td>8am-11pm</td>
+					</tr>
+					<tr>
+						<td>Tuesday</td><td>8am-11pm</td>
+						</tr>
+					<tr>
+						<td>Wednesday</td><td>8am-11pm</td>
+					</tr>
+					<tr>
+						<td>Thursday</td><td>8am-10pm</td>
+					</tr>
+					<tr>
+						<td>Friday</td><td>8am-6pm</td>
+					</tr>
+					<tr>
+						<td>Saturday</td><td>12pm-5pm</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		<div class="row-jsong">
+			<h5>Holiday Hours &amp; Exceptions:</h5>
+			<b>
+				4/18: Closed<br>
+				5/30: Closed<br>
+			</b>
+		</div>
+		<div class="row-jsong">
+			<h5>For full schedule see</h5>
+			<a href="http://www.bostonconservatory.edu/library">Library Hours of Operation</a>
+		</div>
+	</div>
+	<div class="col col-3">
+		<div class="row-jsong">
+			<b>Jennifer Hunt</b><br>
+			Director of the Library<br>
+			<a href="mailto:jhunt@bostonconservatory.edu"> jhunt@bostonconservatory.edu</a><br>
+			617-912-9132<br>
+			<i>Contact for donations and purchase requests</i>
+		</div>
+		<div class="row-jsong">
+			<b>Brendan Higgins</b><br>
+			Public Services Librarian/Archivist<br>
+			<a href="mailto:bhiggins@bostonconservatory.edu"> bhiggins@bostonconservatory.edu</a><br>
+			617-912-9131<br>
+			<i>Contact for course reserves</i>
+		</div>
+		<div class="row-jsong">
+			<b>Reg Didham</b><br>
+			Cataloging and Acquisitions Librarian<br>
+			<a href="mailto:rdidham@bostonconservatory.edu"> rdidham@bostonconservatory.edu</a><br>
+			617-912-9130<br>
+			<i>Contact for inter-library loan</i>
+		</div>
+		<div class="row-jsong">
+			<b>Clifton Ingram</b><br>
+			Evening Circulation Supervisor<br>
+			<a href="mailto:cingram@bostonconservatory.edu"> cingram@bostonconservatory.edu</a><br>
+			617-912-9131<br>
+		</div>
+		<div class="row-jsong">
+			<b>Kevin Church</b><br>
+			Stacks Maintenance Supervisor<br>
+			<a href="mailto:kchurch@bostonconservatory.edu"> kchurch@bostonconservatory.edu</a><br>
+			617-912-9131
+		</div>
+	</div>
+</div>
+</div>
 <!-- / Discovey Layer Editor: Landing Page HTML -->
-
+<!-- Minified by http://www.willpeavy.com/minifier/-->
+<div id="tbc-library-front-contents-wrapper"><div class="tbc-library-front-contents"><div class="col col-1"> <div class="row-jsong"> <h4>Welcome to the Albert Alphin Library Catalog.</h4> </div><div class="row-jsong"><a href="http://bco.kohalibrary.com/cgi-bin/koha/opac-user.pl">Log in to your account</a> to renew your items or check your fines.</div><div class="row-jsong">Click <b><a href="/app/search">Advanced Search</a></b> above to limit by collection or format.</div><div class="row-jsong"><b>Is an item that you want checked out? Place a hold on it!</b><br>Holds cannot be placed on items that are available on the shelf.</div><div class="row-jsong"><img src="http://cdn.kohalibrary.com/c/bco/library.jpg" alt="Library"></div></div><div class="col col-2"><div class="row-jsong"><h5>Regular Semester Hours <br/><b>until 5/6/16</b></h5><table><tbody><tr><td>Sunday</td><td>12pm-10pm</td></tr><tr><td>Monday</td><td>8am-11pm</td></tr><tr><td>Tuesday</td><td>8am-11pm</td></tr><tr><td>Wednesday</td><td>8am-11pm</td></tr><tr><td>Thursday</td><td>8am-10pm</td></tr><tr><td>Friday</td><td>8am-6pm</td></tr><tr><td>Saturday</td><td>12pm-5pm</td></tr></tbody></table></div><div class="row-jsong"><h5>Holiday Hours &amp; Exceptions:</h5><b>4/18: Closed<br>5/30: Closed<br></b></div><div class="row-jsong"><h5>For full schedule see</h5><a href="http://www.bostonconservatory.edu/library">Library Hours of Operation</a></div></div><div class="col col-3"><div class="row-jsong"><b>Jennifer Hunt</b><br>Director of the Library<br><a href="mailto:jhunt@bostonconservatory.edu"> jhunt@bostonconservatory.edu</a><br>617-912-9132<br><i>Contact for donations and purchase requests</i></div><div class="row-jsong"><b>Brendan Higgins</b><br>Public Services Librarian/Archivist<br><a href="mailto:bhiggins@bostonconservatory.edu"> bhiggins@bostonconservatory.edu</a><br>617-912-9131<br><i>Contact for course reserves</i></div><div class="row-jsong"><b>Reg Didham</b><br>Cataloging and Acquisitions Librarian<br><a href="mailto:rdidham@bostonconservatory.edu"> rdidham@bostonconservatory.edu</a><br>617-912-9130<br><i>Contact for inter-library loan</i></div><div class="row-jsong"><b>Clifton Ingram</b><br>Evening Circulation Supervisor<br><a href="mailto:cingram@bostonconservatory.edu"> cingram@bostonconservatory.edu</a><br>617-912-9131<br></div><div class="row-jsong"><b>Kevin Church</b><br>Stacks Maintenance Supervisor<br><a href="mailto:kchurch@bostonconservatory.edu"> kchurch@bostonconservatory.edu</a><br>617-912-9131</div></div></div></div>
+<!-- / Minified -->
 
