clean up the resource contents

--- a/tbc/bco.kohalibrary.com/bco.kohalibrary.com-inline.bak20160709.html
+++ b/tbc/bco.kohalibrary.com/bco.kohalibrary.com-inline.bak20160709.html
@@ -179,4 +179,35 @@ section {
 	</div>
 <!-- / Discovey Layer Editor: Landing Page HTML -->
 
+<!-- Legacy OPAC::OpacNav -->
+<br />
+
+<a href="http://bco.kohalibrary.com/cgi-bin/koha/opac-main.pl">
+<img src="http://cdn.kohalibrary.com/c/bco/library_home.jpg" width="160" alt="Library Home" /></a>
+<br />
+
+<a href="http://www.bostonconservatory.edu/library/reserves" target="_blank"><img src="http://cdn.kohalibrary.com/c/bco/course_reserves.jpg" width="160" alt="Course Reserves" /></a>
+<br />
+
+<a href="https://docs.google.com/leaf?id=0BxGv2MwTy4BpMTZlNWVmMTktMTZmMy00N2ZlLTgxYjYtYTg3YzhjZWM4OGZj&hl=en_US" target="_blank"><img src="http://cdn.kohalibrary.com/c/bco/reference.jpg" width="160" alt="Reference" /></a>
+<br />
+
+<a href="http://www.bostonconservatory.edu/library/periodicals">
+<img src="http://cdn.kohalibrary.com/c/bco/periodicals.jpg" width="160" alt="Periodicals" /></a>
+<br />
+
+<a href="http://www.bostonconservatory.edu/library/electronic-resources">
+<img src="http://cdn.kohalibrary.com/c/bco/internet_resources.jpg" width="160" alt="Internet Resources" /></a>
+<br />
+
+<a href="http://www.bostonconservatory.edu/sites/all/files/Koha%20Search%20Tips_1.pdf">
+<img src="http://cdn.kohalibrary.com/c/bco/search_tips.jpg" width="160" alt="Search Tips" /></a>
+
+<br />
+
+<img src="http://cdn.kohalibrary.com/c/bco/musicscore.jpg" width="160" alt="Music score image" />
+<!-- / Legacy OPAC::OpacNav -->
+
+
+
 
