front page content, standalone search form

--- a/tbc/bco.kohalibrary.com/bco.kohalibrary.com-inline-search-form.html
+++ b/tbc/bco.kohalibrary.com/bco.kohalibrary.com-inline-search-form.html
@@ -9,3 +9,29 @@
 			</div>
 	</div>
 </form>
+
+<!-- /** temporary CSS for testing **/ -->
+<style>
+.search-tbc{
+       width:98%;
+       background-color: #000;
+}
+.search-tbc .searchbar-wrapper{margin-left: 20px;}
+.search-tbc .searchbar-wrapper .small-8.columns{width:80%}
+.search-tbc .searchbar-wrapper .small-8.columns input{width:264px}
+.search-tbc .searchbar-wrapper .small-2.columns{width:20%}
+.search-tbc .searchbar-wrapper .small-2.columns a{
+  display: inline-block;
+  vertical-align: top;
+  padding: 0;
+  margin: 0;
+  height: 30px;
+  width: 30px;
+}
+.search-tbc .searchbar-wrapper .small-2.columns a i{
+       font-size: 20px;
+       margin: 4px 0 0 0;
+       position: relative;
+  left: -5px;
+}
+</style>
