--- a/eds/ebscohost.com.html
+++ b/eds/ebscohost.com.html
@@ -1,8 +1,27 @@
 <!-- Custom JS/CSS section : ebscohost.com -->
 <link rel="shortcut icon" href="//library.berklee.edu/sites/all/themes/jjamerson_lb/favicon.ico" type="image/vnd.microsoft.icon">
-<link rel='stylesheet' href="https://lrweb.berklee.edu/sites/all/themes/jjamerson/bcm-jj-all.css">
-<link rel='stylesheet' href="https://lrweb.berklee.edu/sites/all/themes/jjamerson_lb/stylesheets/jjamerson_lb_screen.css">
-<link rel='stylesheet' href="https://lrweb.berklee.edu/sites/all/themes/jjamerson_lb/stylesheets/guides.library.berklee.edu.css">
+<link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" media="all" />
+<link rel='stylesheet' href="//lrweb.berklee.edu/sites/eds/bcm-jj-all.css">
+<link rel='stylesheet' href="//lrweb.berklee.edu/sites/eds/jjamerson_lb_screen.css">
+<link rel='stylesheet' href="//lrweb.berklee.edu/sites/eds/ebscohost.css">
 <style>#toolbarControl .presentation{display:none;}#toolbarControl{background-image:none;border-bottom:none;}#toolbarControl .nav-item{padding:8px 1px 8px;}.region-top-nav{padding:0 0 0 0;}</style>
-<script type="text/javascript" src="//lrweb.berklee.edu/sites/eds/ebscohost.dev.js"></script>
+<script type="text/javascript">function downloadJSAtOnload(){var element = document.createElement("script");element.src = "//lrweb.berklee.edu/sites/eds/ebscohost.dev.js";document.body.appendChild(element);}if(window.addEventListener)window.addEventListener("load", downloadJSAtOnload, false);else if (window.attachEvent)window.attachEvent("onload", downloadJSAtOnload);else window.onload = downloadJSAtOnload;</script>
 <!-- END Custom JS/CSS section -->
+
+
+
+<!-- http://eadmin.ebscohost.com/eadmin/profiles/ProfileBrandingForm.aspx : basic search : Enter HTML Text -->
+<script type="eptemplate/header">
+    {
+    "Shadow" : "none",
+    "Height" : "130px",
+    "bgcolor" : "#FFFFFF",
+    "bgimage" : "none",
+    "bgposition" : "center left",
+    "bgrepeat" : "no-repeat",
+    "logopadding" : "0px 0px 0px 50px",
+    "logoaltpadding" : "0px 0px 0px 50px",
+    "logo" : "https://lrweb.berklee.edu/sites/all/themes/jjamerson_lb/logo.png",
+    "logolink" : "https://library.berklee.edu/"
+    }
+</script>
