--- a/eds/ebscohost.com.html
+++ b/eds/ebscohost.com.html
@@ -1,11 +1,8 @@
 <!-- Custom JS/CSS section : ebscohost.com -->
 <link rel="shortcut icon" href="//library.berklee.edu/sites/all/themes/jjamerson_lb/favicon.ico" type="image/vnd.microsoft.icon">
 <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" media="all" />
-<link rel='stylesheet' href="//lrweb.berklee.edu/sites/eds/bcm-jj-all.css">
-<link rel='stylesheet' href="//lrweb.berklee.edu/sites/eds/jjamerson_lb_screen.css">
 <link rel='stylesheet' href="//lrweb.berklee.edu/sites/eds/ebscohost.css">
-<style>#toolbarControl .presentation{display:none;}#toolbarControl{background-image:none;border-bottom:none;}#toolbarControl .nav-item{padding:8px 1px 8px;}.region-top-nav{padding:0 0 0 0;}</style>
-<script type="text/javascript">function downloadJSAtOnload(){var element = document.createElement("script");element.src = "//lrweb.berklee.edu/sites/eds/ebscohost.dev.js";document.body.appendChild(element);}if(window.addEventListener)window.addEventListener("load", downloadJSAtOnload, false);else if (window.attachEvent)window.attachEvent("onload", downloadJSAtOnload);else window.onload = downloadJSAtOnload;</script>
+<script type="text/javascript">function downloadJSAtOnload(){var element = document.createElement("script");element.src = "//lrweb.berklee.edu/sites/eds/ebscohost.js";document.body.appendChild(element);}if(window.addEventListener)window.addEventListener("load", downloadJSAtOnload, false);else if (window.attachEvent)window.attachEvent("onload", downloadJSAtOnload);else window.onload = downloadJSAtOnload;</script>
 <!-- END Custom JS/CSS section -->
 
 
@@ -21,7 +18,7 @@
     "bgrepeat" : "no-repeat",
     "logopadding" : "0px 0px 0px 50px",
     "logoaltpadding" : "0px 0px 0px 50px",
-    "logo" : "https://lrweb.berklee.edu/sites/all/themes/jjamerson_lb/logo.png",
+    "logo" : "https://lrweb.berklee.edu/sites/all/themes/jjamerson_lb/logo-lb-mobile.svg",
     "logolink" : "https://library.berklee.edu/"
     }
 </script>
