--- a/eds/ebscohost.com.html
+++ b/eds/ebscohost.com.html
@@ -2,8 +2,9 @@
 <link rel="shortcut icon" href="//library.berklee.edu/sites/all/themes/jjamerson_lb/favicon.ico" type="image/vnd.microsoft.icon">
 <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" media="all" />
 <link rel='stylesheet' href="//lrweb.berklee.edu/sites/eds/ebscohost.css">
-<script type="text/javascript">function downloadJSAtOnload(){var element = document.createElement("script");element.src = "//lrweb.berklee.edu/sites/eds/ebscohost.js";document.body.appendChild(element);}if(window.addEventListener)window.addEventListener("load", downloadJSAtOnload, false);else if (window.attachEvent)window.attachEvent("onload", downloadJSAtOnload);else window.onload = downloadJSAtOnload;</script>
+<script type="text/javascript" src="//lrweb.berklee.edu/sites/eds/ebscohost.js"></script>
 <!-- END Custom JS/CSS section -->
+
 
 
 
@@ -22,3 +23,12 @@
     "logolink" : "https://library.berklee.edu/"
     }
 </script>
+
+
+
+<!-- OLD Custom JS/CSS section : ebscohost.com -->
+<link rel="shortcut icon" href="//library.berklee.edu/sites/all/themes/jjamerson_lb/favicon.ico" type="image/vnd.microsoft.icon">
+<link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" media="all" />
+<link rel='stylesheet' href="//lrweb.berklee.edu/sites/eds/ebscohost.css">
+<script type="text/javascript">function downloadJSAtOnload(){var element = document.createElement("script");element.src = "//lrweb.berklee.edu/sites/eds/ebscohost.js";document.body.appendChild(element);}if(window.addEventListener)window.addEventListener("load", downloadJSAtOnload, false);else if (window.attachEvent)window.attachEvent("onload", downloadJSAtOnload);else window.onload = downloadJSAtOnload;</script>
+<!-- END Custom JS/CSS section -->
